API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes)

2-Dec-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added example: examples/cmdline/listoptions.cpp
	Added entryAttributes processing for morph segs

23-Nov-2006	Daniel Glassey <dglassey@crosswire.org>
	Use acx_clucene.m4 from CLucene contribs to detect CLucene
	apply Debian patch for flatapi for 64-bit portability

20-Nov-2006	Troy A. Griffitts <scribe@crosswire.org>
	Moved treekey and genbook tests to utilities
	Finished first stable version of rewrite of imp2gbs
	Fixed bug in treekey where didn't break on found sibling
	Added .trim to localName segments of genbook path,
		e.g. /this / is/a/test/  - all spaces will be removed.
	Added recognition of additional greek accent ~
		in UTF8GreekAccents filter
	Fixed bug in RawGenBook::setText where default size
		is < 0, not false.
	Changed lucene indexing to actually index the key field.  This
		allows searching within key field (e.g. key:word)
	Fixed divineName logic
	Fixed & handling

* Release 1.5.9 *

21-Sep-2006	Troy A. Griffitts <scribe@crosswire.org>
	Clean up and package for 1.5.9
	Added Thai Unicode locale coutesy of
		Adrian Korten <adrian_korten@sil.org>

29-Aug-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added recognition for the sysConfig parameter in SWMgr c-tor
		(allow passing path to sword.conf to use for config)
	Updated CORBA server to allow option -sysConf /path/sword.conf

16-Aug-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added new module lookup options:
		./sword.conf
		../library/mods.d
	Added fix to preserve markup in headings (charcoal)
	Fixed non-UTF8 builds (thanks berkana)

1-Aug-2006	DM Smith <dmsmith@crosswire.org>
	Fixed divineName bug
	Updated q handling to use quote stack
	Update to fix RLT
	Fixed a bug in osis2mod that duplicated a chapter title in the verse
	Normalize whitespace in xml tags
	Updated support for more OSIS markup, including q marker
