@@ -2,10 +2,11 @@ AUTOMAKE_OPTIONS = 1.6
 INCLUDES = -I $(top_srcdir)/include
 LDADD = $(top_builddir)/lib/libsword.la
 
-noinst_PROGRAMS = lookup search threaded_search listoptions
+noinst_PROGRAMS = lookup search threaded_search listoptions verserangeparse
 
 lookup_SOURCES = lookup.cpp
 search_SOURCES = search.cpp
 listoptions_SOURCES = listoptions.cpp
+verserangeparse_SOURCES = verserangeparse.cpp
 threaded_search_SOURCES = threaded_search.cpp
 threaded_search_LDADD = $(LDADD) -lpthread
